--- a/Implementataion/Css/index.css
+++ b/Implementataion/Css/index.css
@@ -3,6 +3,9 @@
   padding: 0;
   font-family: "poppins";
 }
+body {
+  background-color: #fbf9f1;
+}
 header {
   background-color: #fbf9f1;
 }
@@ -17,6 +20,7 @@ nav {
 .logo {
   height: 100px;
   width: 100px;
+
   /* position: fixed; */
   margin-bottom: 50px;
   transition: scale 0.5s ease;
@@ -90,8 +94,6 @@ nav {
   animation: slideInOut 4s infinite ease-in-out;
 }
 
-
-
 .submenu {
   height: 52px;
   display: flex;
@@ -134,7 +136,6 @@ nav {
   width: 30px;
 }
 
-
 .searchbar {
   display: flex;
   flex-direction: row;
@@ -145,9 +146,9 @@ nav {
   border-radius: 25px;
   margin-top: 15px;
   align-items: center;
+  background-color: #fff;
   box-shadow: 0px 5px 15px #b4b4b8;
 }
-
 .searchbar img {
   height: 30px;
   width: 30px;
@@ -178,25 +179,24 @@ nav {
 }
 /* Custom scroll bar*/
 ::-webkit-scrollbar {
-  width: 15px; 
+  width: 15px;
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #f1f1f1;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(135deg, #dbe7c9, #c7e39e); 
-  border-radius: 10px; 
-  border: 1px solid #ccc; 
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3); 
-  
+  background: linear-gradient(135deg, #dbe7c9, #c7e39e);
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 #hotelContainer {
   display: flex;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
   align-items: center;
@@ -205,7 +205,7 @@ nav {
 }
 #PlacesContainer {
   display: none;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
   align-items: center;
@@ -214,7 +214,7 @@ nav {
 }
 #ResturantsContainer {
   display: none;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
   align-items: center;
@@ -224,7 +224,7 @@ nav {
 
 #RecommandationsContainer {
   display: none;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
   align-items: center;
@@ -232,8 +232,17 @@ nav {
   margin-top: 10px;
 }
 
+#CurrencyConverter {
+  display: none;
+  justify-content: center;
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 25px;
+}
+
 .card {
-  flex-basis: calc(20% - 20px); 
+  background-color: #fff;
+  flex-basis: calc(20% - 20px);
   height: 270px;
   border-radius: 10px;
   box-shadow: 0px 5px 15px #b4b4b8;
@@ -241,13 +250,13 @@ nav {
   cursor: pointer;
   transition: transform 0.5s ease;
 }
-.card p{
+.card p {
   padding-left: 10px;
 }
-.card h2{
+.card h2 {
   padding-left: 5px;
 }
-.card button{
+.card button {
   margin: 5px;
   width: 80px;
   height: 25px;
@@ -277,36 +286,90 @@ nav {
   cursor: pointer;
 }
 
-.city{
+.city {
   font-size: 12px;
   color: #7a7979;
+}
+.maincard {
+  margin-top: 20px;
+  height: 30vh;
+  width: 60vw;
+  background-color: #fff;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  box-shadow: 0px 5px 15px #b4b4b8;
+}
+.heading {
+  font-size: 30px;
+  font-weight: 600;
+}
+.cardinputs {
+  width: 50vw;
+  display: flex;
+  justify-content: space-between;
+}
+.cardinputs input {
+  /* background-color: #bbe2ec; */
+  width: 10vw;
+  height: 5vh;
+  padding: 3px;
+  font-weight: 600;
+  border: 1px solid #000;
+  margin-top: 10px;
+}
+.Result{
+  margin: 10px;
+  font-size: 20px;
+  font-weight: 600;
+  border: 2px solid #000;
+  padding: 5px;
+}
+.cardinputs input:focus {
+  outline: none;
+}
+.from select{
+  width: 7vw;
+  padding: 3px;
+  font-weight: 600;
+  border: 1px solid #000;
+  margin-top: 15px;
+}
+.to select{
+  width: 7vw;
+  padding: 3px;
+  font-weight: 600;
+  border: 1px solid #000;
+  margin-top: 15px;
+}
  
+.cardinputs button {
+  margin: 15px;
+  width: 80px;
+  height: 30px;
+  background-color: #40a2e3;
+  border: 1px solid #000;
+  color: #fff;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in, color 0.3s ease-in,
+    transform 0.2s ease;
 }
-    
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-} 
-@keyframes rotationBack {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(-360deg);
-  }
+.cardinputs button:hover {
+  background-color: #bbe2ec;
+  color: #000;
+  transform: translateY(-5px);
 }
-    
+
 /* custom animations */
 @keyframes slideInOut {
   0% {
     opacity: 0.1;
     transform: translateX(20%) scale(0.7);
   }
-  25%{
+  25% {
     opacity: 0.7;
     transform: translateX(10%) scale(1.05);
   }
@@ -314,8 +377,8 @@ nav {
     opacity: 1;
     transform: translateX(0) scale(1);
   }
-  75%{
-opacity: 0.7;
+  75% {
+    opacity: 0.7;
     transform: translateX(-10%) scale(1.05);
   }
   100% {
@@ -326,20 +389,18 @@ opacity: 0.7;
 
 @keyframes rotation {
   0% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
 @keyframes rotationBack {
   0% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-      transform: rotate(-360deg);
+    transform: rotate(-360deg);
   }
 }
-
-
