--- a/Implementataion/Css/index.css
+++ b/Implementataion/Css/index.css
@@ -231,6 +231,15 @@ nav {
   width: 100%;
   margin-top: 10px;
 }
+#TransportationContainer {
+  display: none;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+  width: 100%;
+  margin-top: 10px;
+}
 
 #CurrencyConverter {
   display: none;
@@ -312,7 +321,6 @@ nav {
   justify-content: space-between;
 }
 .cardinputs input {
-  /* background-color: #bbe2ec; */
   width: 10vw;
   height: 5vh;
   padding: 3px;
