--- a/Implementataion/Css/excursion.css
+++ b/Implementataion/Css/excursion.css
@@ -38,6 +38,12 @@ gap: 45px;
   color: #000;
 
 }
+.headtext1{
+  background-color: #c7e39e;
+  border-radius: 10px;
+  padding: 2px;
+
+}
 .main{
 background-color: #fbf9f1;
 display:flex;
@@ -220,7 +226,7 @@ width: 200px;
 }
 .btn{
   margin-top: 220px;
-  margin-left: 650px;
+  margin-left: 750px;
   width: 80px;
 }
 .btn button{
@@ -238,4 +244,15 @@ width: 200px;
   color: #000;
   transform: translateY(-5px);
 }
-
+.seats input{
+  width: 20px;
+}
+.vayage{
+  display: flex;
+}
+.lodging-arrangment{
+  display: none;
+}
+.mainbodi{
+  background-color: #000;
+}
