--- a/Implementataion/Css/contact.css
+++ b/Implementataion/Css/contact.css
@@ -9,6 +9,20 @@
 body {
     background-color: #fbf9f1;
   }
+  ::-webkit-scrollbar {
+    width: 15px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  ::-webkit-scrollbar-thumb {
+    background:linear-gradient(135deg, #dbe7c9, #c7e39e);
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
+  }
+  
 .contact{
     height: 100%;
     width: 100%;
@@ -16,8 +30,6 @@ body {
    flex-direction: column;
    align-items: center;
    margin-top: 27px;
-   
-   /* justify-content: center; */
 
 }
 .info {
@@ -123,19 +135,27 @@ height: 300px;
     .sub-element input{
       font-size:16px;
       width: 220px;
-    
+      border: 1px solid #000;
+      background-color: #bbe2ec;
       margin-top: 5px;
       padding: 5px;
-
     }
+    .sub-element input:focus {
+        outline: none;
+      }
    
     .Message textarea{
+        padding: 2px;
             width: 85%;
+            border: 1px solid #000;
             height: 150%;
             margin-left: 28px;
             font-size:16px;
+            background-color: #bbe2ec;
     }
-   
+   .Message textarea:focus {
+    outline: none;
+  }
      .Message p{
         margin-left: 30px;
          margin-top: 20px;
