--- a/Implementataion/Css/excursion.css
+++ b/Implementataion/Css/excursion.css
@@ -242,3 +242,9 @@ width: 200px;
 #calculation{
   display: none;
 }
+/* remove btn form seat input */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
