--- a/Implementataion/Css/excursion.css
+++ b/Implementataion/Css/excursion.css
@@ -7,17 +7,13 @@
     font-family: "poppins";  
     
   }
- 
-.sidebar {
+ .sidebar {
   transition: width 0.3s linear; 
 }
-
 .head{
   display: flex ;
   flex-direction: row;
   justify-content: space-between ;
-  
-
 }
 .navbar{
   height: 85px;
@@ -133,7 +129,6 @@ width: 300px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
   display: flex;
 }
  .text{
@@ -150,9 +145,10 @@ width: 300px;
   color: #fbf9f1;
  }
  .booking{
-  margin-top: 50px;
+  margin-top: 80px;
   display: flex;
   flex-direction: column;
+margin-bottom: 200PX;
  }
  .booking select{
   width: 20%;
@@ -242,9 +238,47 @@ width: 200px;
 #calculation{
   display: none;
 }
+.hotels{
+  display: flex;
+
+}
+.sub-bill{
+height: 100px;
+width: 30px;
+background-color: #fbf9f1;
+margin-left: 500px;
+width: 250px;
+border-radius: 10px;
+display: flex;
+flex-direction: row;
+
+
+}
+.sub-bill p{
+  color: #000;
+ font-size: 20px;
+ 
+
+
+}
+.f1{
+  margin-left: 20px;
+
+   
+}
+
+#fare {
+  margin-right:70px;
+
+}
+
+
 /* remove btn form seat input */
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+
+
+
