--- a/Implementataion/Css/index.css
+++ b/Implementataion/Css/index.css
@@ -454,26 +454,33 @@ transition: all 0.3s ease;
 
 .card {
   background-color: #fff;
-  flex-basis: calc(20% - 20px);
+  width: 220px; 
   height: 270px;
   border-radius: 10px;
   box-shadow: 0px 5px 15px #b4b4b8;
   margin: 10px;
   cursor: pointer;
   transition: transform 0.5s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
+
 .card p {
   padding-left: 10px;
 }
+
 .card h2 {
   padding-left: 5px;
 }
+
 .card button {
-  margin: 5px;
+  margin: 10px;
   width: 80px;
   height: 25px;
   background-color: #40a2e3;
   border: 1px solid #000;
+  border-radius: 5px;
   color: #fff;
   font-weight: 600;
   cursor: pointer;
@@ -492,7 +499,7 @@ transition: all 0.3s ease;
 
 .card img {
   width: 100%;
-  height: 145px;
+  height: 145px; 
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
   cursor: pointer;
