--- a/Implementataion/Css/excursion.css
+++ b/Implementataion/Css/excursion.css
@@ -123,7 +123,7 @@ width: 300px;
   #inclusive-container{
     width: 100%;
     height: 84.5%;
-    /* display: none; */
+    margin-top: 20px;
   }
   #lodge-container{
     display: none;
@@ -157,13 +157,14 @@ width: 300px;
   }
  .mainbody{
   width: 100%;
-  height: 100%;
+  height: 85.5%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../assests/trip.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
+  flex-direction: row-reverse;
 }
  .text{
   height: 20px;
@@ -179,7 +180,7 @@ width: 300px;
   color: #fbf9f1;
  }
  .booking{
-  margin-top: 80px;
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
 margin-bottom: 200PX;
@@ -200,7 +201,7 @@ margin-bottom: 200PX;
  .card{
   margin-top: 20px;
   height: 120px;
-  width: 80%;
+  width: 100%;
 }
 .card-content{
   display: flex;
@@ -265,57 +266,49 @@ width: 200px;
 
 #lodgeing{
   display: none;
+
 }
 #moving{
   display: none;
 }
 #calculation{
   display: none;
+  justify-content: center;
+  align-items: center;
 }
 .hotels{
   display: flex;
 
 }
 .sub-bill{
+  margin-top: 30px;
+  margin-left: -100px;
+  margin-right: 10px;
 height: 120px;
 width: 30px;
 background-color: #fbf9f1;
-margin-left: 500px;
 width: 250px;
 border-radius: 10px;
 display: flex;
-<<<<<<< Updated upstream
-flex-direction: row;
-=======
 flex-direction: column;
 }
 .sub-content{
   display: flex;
   flex-direction: row;
->>>>>>> Stashed changes
 }
 
 .sub-bill p{
   color: #000;
  font-size: 20px;
-<<<<<<< Updated upstream
-}
-
-.f1{
-  margin-left: 20px;   
-=======
 
 }
 .f1{
   margin-left: 20px;
->>>>>>> Stashed changes
 }
 .fare {
   margin-right:70px;
 }
 
-<<<<<<< Updated upstream
-=======
 .sub-bill button
 {
   background-color: #40a2e3;
@@ -345,8 +338,8 @@ flex-direction: column;
   transition: opacity 0.5s ease;
 }
 
-.card{
-  margin-left: 100px;
+.cardes{
+  margin-right: 100px;
   height: 400px;
   width: 400px;
   background-color: #fff;
@@ -458,12 +451,86 @@ margin-top: 40px;
 .name h3{
   margin-top: -30px;
 }
+.subdivbill{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+}
+.sub-billcal{
+height: 120px;
+width: 30px;
+background-color: #fbf9f1;
+width: 250px;
+border-radius: 10px;
+display: flex;
+flex-direction: column;
+margin-bottom: 250px;
+}
+.sub-billcal p{
+  margin-top: 10px;
+  color: #000;
+ font-size: 20px;
 
+}
+.lodgesub-bill{
+  margin-top: 30px;
+  margin-left: -100px;
+  margin-right: 10px;
+height: 85px;
+width: 30px;
+background-color: #fbf9f1;
+width: 250px;
+border-radius: 10px;
+display: flex;
+flex-direction: column;
+}
+.lodgemainbody{
+  width: 100%;
+  height: 101%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../assests/trip.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: row-reverse;
+}
+.lodgesub-bill p{
+  margin-top: 15px;
+}
+.lodgesub-bill button
+{
+  background-color: #40a2e3;
+  width: 80px;
+  border-radius: 5px;
+  color: #fff;
+  margin-left: 70px;
+  height: 50px;
+  margin-bottom: 5px;
+  cursor: pointer;
+ transition: all 0.3s ease-in-out;
+}
+.lodgesub-bill button:hover{
+  background-color: #bbe2ec;
+  color: #000;
+  transform: translateY(-10px);
+}
+.carmainbody{
+  width: 100%;
+  height: 101%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../assests/trip.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: row-reverse;
+}
 
 /* remove btn form seat input */
->>>>>>> Stashed changes
-input[type="number"]::-webkit-inner-spin-button,
+/* input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
-}
+} */
